Intent de canvis

--- a/src/main.html
+++ b/src/main.html
@@ -1,90 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Arturo Pérez" />
-    <meta name="keywords" content="HTML, CSS, JavaScript, Music" />
-    <meta http-equiv="refresh" content="30" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Buy any kind of vintage music" />
-    <title>Tailwind CSS with Parcel</title>
-    <link rel="stylesheet" href="../dist/styles.css" />
-    <link rel="stylesheet" href="./clip-path.css" />
-  </head>
-  <body>
-    <header class="w-[100%] h-[69px] p-5 flex flex-row justify-between relative bg-slate-500">
-      <div class="flex flex-row items-center">
-        <!-- Left -->
-        <div class="w-12 h-11justify-center items-center inline-flex">
-          <div class="w-[47.52px] h-[43.52px] relative">
-            <img src="./img/Python-logo-notext.svg (1).png" alt="" />
-          </div>
-        </div>
-      </div>
 
-      <div class="flex gap-5 flex-row items-center">
-        <!-- Right -->
-        <div class="text-black text-sm font-bold font-['Inter']"><a href="./aboutUs.html">About us</a></div>
-        <div class="text-black text-sm font-bold font-['Inter']"><a href="./products.html">Products</a></div>
-        <a href="./main.html"><img src="./img/shopping-cart (1).svg" alt="" /></a>
-      </div>
-    </header>
-    <main>
-      <div style="background-image: url(./img/hero.jpg)" class="w-full h-9 clip-path-bot">
-        <div class="flex flex-column">
-          <h1 class="text-5xl text-center text-white font-bold font-['Inter']">Welcome to our store</h1>+
-          <p class="text-center text-white font-bold font-['Inter']">Buy any kind of vintage music</p>
-          <a href="#"><button>Buy</button></a>
-          <a href="#"><button>About us</button></a>
-        </div>
-        <br />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Arturo Pérez" />
+  <meta name="keywords" content="HTML, CSS, JavaScript, Music" />
+  <meta http-equiv="refresh" content="30" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Buy any kind of vintage music" />
+  <title>Tailwind CSS with Parcel</title>
+  <link rel="stylesheet" href="../dist/styles.css" />
+  <link rel="stylesheet" href="./clip-path.css" />
+</head>
 
-      <article>
-        <div>
-          <h1>Our latest products</h1>
-          <p>Here you can see our latest products</p>
+<body class="flex flex-col justify-between">
+  <header class="w-[100%] h-[3em] p-5 flex flex-row justify-between  bg-slate-500">
+    <div class="flex flex-row items-center">
+      <!-- Left -->
+      <div class="w-[1em] h-[1em] justify-center items-center inline-flex">
+        <div class="w-[47.52px] h-[43.52px] ">
+          <img src="./img/Python-logo-notext.svg (1).png" alt="" />
         </div>
-        <div>
-          <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
-            <img class="w-full md:w-1/2" src="#" alt="Product 1" />
-            <div class="w-full md:w-1/2">
-              <h2 class="text-2xl font-bold mb-2">Product name</h2>
-              <p class="mb-4">Product description</p>
-              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
-            </div>
-          </section>
-          <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
-            <img class="w-full md:w-1/2" src="#" alt="Product 1" />
-            <div class="w-full md:w-1/2">
-              <h2 class="text-2xl font-bold mb-2">Product name</h2>
-              <p class="mb-4">Product description</p>
-              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
-            </div>
-          </section>
-          <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
-            <img class="w-full md:w-1/2" src="#" alt="Product 1" />
-            <div class="w-full md:w-1/2">
-              <h2 class="text-2xl font-bold mb-2">Product name</h2>
-              <p class="mb-4">Product description</p>
-              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
-            </div>
-          </section>
+      </div>
+    </div>
+
+    <div class="flex gap-5 flex-row items-center ">
+      <!-- Right -->
+      <div class="hidden sm:text-black sm:text-sm sm:font-bold sm:font-['Inter']"><a href="./aboutUs.html">About us</a>
+      </div>
+      <div class="hidden sm:text-black sm:text-sm sm:font-bold sm:font-['Inter']"><a href="./products.html">Products</a>
+      </div>
+      <a class="hidden sm:text-black sm:text-sm sm:font-bold sm:font-['Inter']" href="./main.html"><img
+          src="./img/shopping-cart (1).svg" alt="" /></a>
+      <a class="flex gap-5 flex-row items-center sm:hidden">
+        <i class="fa-solid fa-bars"></i>
+      </a>
+    </div>
+  </header>
+  <main class="flex flex-col">
+    <div id="hero" style="background-image: url(./img/hero.jpg)" class="flex flex-row">
+      <div id="filler-left" class="flex grow">
+      </div>
+      <div id="content-right" class="flex flex-col">
+        <h1 >Welcome!</h1>
+        <p >Buy any kind of vintage music</p>
+        <div id="buttons" class="">
+          <a href="#">Buy</a>
+          <a href="#">About us</a>
         </div>
-      </article>
-    </main>
-    <footer class="w-[100%] p-5 bg-slate-500 flex justify-between flex-wrap flex-row relative">
-      <a href="./aboutUs.html"><div class="text-black text-sm font-bold font-['Inter']">About us</div></a>
-      <a href="./products.html"><div class="text-black text-sm font-bold font-['Inter']">Products</div></a>
-      <div class="flex flex-row items-center gap-1">
-        <a href="./main.html"
-          ><img src="./img/Python-logo-notext.svg (1).png" class="w-[2em] h-[2em] relative" alt="" />Company Name</a
-        >
       </div>
-      <div class="text-black text-sm font-bold font-['Inter'] flex flex-row items-center gap-1">
-        <img class="w-[2em] h-[2em] relative" src="./img/Python-logo-notext.svg (1).png" alt="" />
-        Go up
-      </div>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer class="w-[100%] p-5 bg-slate-500 flex justify-between flex-wrap flex-row relative">
+    <a href="./aboutUs.html">
+      <div class="text-black text-sm font-bold font-['Inter']">About us</div>
+    </a>
+    <a href="./products.html">
+      <div class="text-black text-sm font-bold font-['Inter']">Products</div>
+    </a>
+    <div class="flex flex-row items-center gap-1">
+      <a href="./main.html"><img src="./img/Python-logo-notext.svg (1).png" class="w-[2em] h-[2em] relative"
+          alt="" />Company Name</a>
+    </div>
+    <div class="text-black text-sm font-bold font-['Inter'] flex flex-row items-center gap-1">
+      <img class="w-[2em] h-[2em] relative" src="./img/Python-logo-notext.svg (1).png" alt="" />
+      Go up
+    </div>
+  </footer>
+</body>
+
 </html>
