Article flex-col

--- a/src/main.html
+++ b/src/main.html
@@ -50,6 +50,41 @@
         </div>
       </div>
     </div>
+
+    <article>
+      <div class="my-10">
+        <h1 class="text-3xl font-bold mb-2">Our latest products</h1>
+        <p class="text-lg">Here you can see our latest products</p>
+      </div>
+      <div class="flex flex-col md:flex-row md:flex-wrap">
+        <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
+          <img class="w-full md:w-1/2" src="./img/vinyl1.jpg" alt="Product 1" />
+          <div class="w-full md:w-1/2">
+            <h2 class="text-2xl font-bold mb-2">Product name</h2>
+            <p class="mb-4">Product description</p>
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
+          </div>
+        </section>
+        <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
+          <img class="w-full md:w-1/2" src="./img/vinyl1.jpg" alt="Product 2" />
+          <div class="w-full md:w-1/2">
+            <h2 class="text-2xl font-bold mb-2">Product name</h2>
+            <p class="mb-4">Product description</p>
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
+          </div>
+        </section>
+        <section class="flex flex-col md:flex-row md:items-center md:justify-center md:gap-10">
+          <img class="w-full md:w-1/2" src="./img/vinyl1.jpg" alt="Product 3" />
+          <div class="w-full md:w-1/2">
+            <h2 class="text-2xl font-bold mb-2">Product name</h2>
+            <p class="mb-4">Product description</p>
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Buy now</button>
+          </div>
+        </section>
+      </div>
+    </article>
+        
+
   </main>
   <footer class="w-[100%] p-5 bg-slate-500 flex justify-between flex-wrap flex-row relative">
     <a href="./aboutUs.html">
