--- a/src/products.html
+++ b/src/products.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Buy any kind of vintage music" />
     <title>Tailwind CSS with Parcel</title>
-    <link rel="stylesheet" href="../dist/styles.css" />
     <link rel="stylesheet" href="./clip-path.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header class="w-full h-16 p-5 flex flex-row justify-between relative bg-slate-500">
+    <header class="w-full h-16 p-5 flex flex-row justify-between relative bg-orange-500">
       <div class="flex flex-row items-center">
         <!-- Left -->
         <div class="w-12 h-11 justify-center items-center inline-flex">
