--- a/src/vinyl1.html
+++ b/src/vinyl1.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Buy any kind of vintage music" />
     <title>Tailwind CSS with Parcel</title>
-    <link rel="stylesheet" href="../dist/styles.css" />
     <link rel="stylesheet" href="./clip-path.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header class="w-full h-16 p-5 flex flex-row justify-between relative bg-slate-500">
