--- a/src/main.html
+++ b/src/main.html
@@ -36,27 +36,31 @@
 
   <main class="flex flex-col">
     <div id="hero" style="background-image: url(./img/hero.jpg); background-repeat: no-repeat; background-size: cover;"
-      class="flex flex-row flex-grow">
+      class="flex flex-row flex-grow lg: clip-path-bot">
       <div id="filler-left" class="flex flex-grow">
       </div>
       <div id="content-right" class="flex flex-col p-6 place-content-center">
         <h1 class="text-4xl font-bold mb-4">Welcome!</h1>
         <p class="text-3xl mb-4">Buy any kind of vintage music</p>
-        <div id="buttons" class="flex flex-col justify-center gap-3">
+        <div id="buttons" class="flex flex-col justify-center gap-3 mb-20">
           <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded w-fit">Buy</a>
           <a href="#" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-6 rounded w-fit">About us</a>
         </div>
       </div>
     </div>
 
-    <section class="bg-gray-200 p-5">
-      <div class="p-6">
+    <div class="h-[10em] pt-5 pb-5" >
+      <img class="h-[1/2] m-full" src="./img/Clippath.jpg" alt="">
+    </div>
+
+    <section class="bg-gray-200 p-5 md: clip-path-top ">
+      <div class="p-6 mt-20">
         <h1 class="text-3xl font-bold mb-2">Our latest products</h1>
         <p class="text-lg">Here you can see our latest products</p>
       </div>
       <article class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <section class="flex flex-col bg-white rounded-lg items-center justify-center p-6">
-          <img class="w-1/3 md:w-full" src="./img/vinyl1.jpg" alt="Product 1" />
+          <img class="w-1/4 md:w-full" src="./img/vinyl1.jpg" alt="Product 1" />
           <div class="grid grid-cols-1 w-1/2 md:w-full">
             <h2 class="text-2xl font-bold mb-2">Classic Vinyl Collection</h2>
             <p class="mb-4">Immerse yourself in the timeless tunes of our handpicked classic vinyl records. Rediscover
