--- a/src/products.html
+++ b/src/products.html
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil2.jpg" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil3.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil4.jpg" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil5.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil6.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil7.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -173,7 +173,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil8.jpg" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -191,7 +191,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil9.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil10.webp" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil11.jpg" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
@@ -245,7 +245,7 @@
             </div>
           </div>
           <div class="flex flex-col items-center bg-white rounded-lg shadow-lg overflow-hidden">
-            <img class="w-full" src="./img/vinyl1.jpg" alt="" />
+            <img class="w-full" src="./img/vynil12.jfif" alt="" />
             <div class="p-4">
               <h1 class="text-gray-900 font-bold text-xl mb-2">Vinyl 1</h1>
               <p class="text-gray-700 text-base mb-4">Pink Floyd's "The Dark Side of the Moon" is a concept album that
