--- a/src/vinyl2.html
+++ b/src/vinyl2.html
@@ -12,34 +12,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header class="w-full h-16 p-5 flex flex-row justify-between relative bg-slate-500">
+    <header class="w-[100%] h-[69px] border-b-2 font-josefin border-black p-5 flex flex-row justify-between relative bg-orange-600">
       <div class="flex flex-row items-center">
-        <!-- Left -->
-        <div class="w-12 h-11 justify-center items-center inline-flex">
-          <div class="w-12 h-12 relative">
-            <img src="./img/Python-logo-notext.svg (1).png" alt="" class="w-full h-full object-contain" />
+        <div class="w-12 h-11justify-center items-center inline-flex">
+          <div class="w-[47.52px] h-[43.52px] relative">
+            <img src="./img/Logo.svg" alt="" />
           </div>
         </div>
       </div>
-
       <div class="flex gap-5 flex-row items-center">
-        <!-- Right -->
-        <div class="text-black text-sm font-bold font-inter"
-          ><a href="./aboutUs.html" class="hover:text-gray-400">About us</a></div
-        >
-        <div class="text-black text-sm font-bold font-inter"
-          ><a href="./products.html" class="hover:text-gray-400">Products</a></div
-        >
-        <a href="./main.html"
-          ><img src="./img/shopping-cart (1).svg" alt="" class="w-6 h-6 object-contain hover:opacity-75"
-        /></a>
+        <div class="text-black text-lg font-bold "><a href="./main.html">Home</a></div>
+        <div class="text-black text-lg font-bold "><a href="./aboutUs.html">About us</a></div>
+        <a href="./main.html"><img src="./img/shopping-cart (1).svg" alt="" /></a>
       </div>
     </header>
-    <main> 
-
+    <main>
       <article class="flex flex-col md:flex-row md:items-center md:justify-between mb-5">
         <div class="w-full md:w-1/2 mb-4 md:mb-0">
-          <img src="./img/vinyl1.jpg" alt="" class="w-full h-auto object-cover" />
+          <img src="./img/vynil2.jpg" alt="" class="w-full h-auto object-cover" />
         </div>
         <div class="w-full md:w-1/2 md:pl-8">
           <h1 class="text-2xl font-bold mb-4">Vinyl 1</h1>
@@ -57,7 +47,7 @@
         </div>
       </article>
       <hr />
-    <div class="container mx-auto px-4 py-8 bg-slate-100">
+    <div class="container mx-auto px-4 py-8 bg-slate-100 m-5">
         <h1 class="text-3xl font-bold mb-4">Introducing the Vinyl Gem: Pink Floyd's "The Dark Side of the Moon"</h1>
         <p class="text-lg leading-relaxed mb-4">
             At Vinyl Haven, we are proud to present one of the most iconic and influential albums in the history of music – Pink Floyd's "The Dark Side of the Moon." This vinyl record is a true masterpiece that has left an indelible mark on the world of rock music, and we are thrilled to offer it to you.
@@ -83,16 +73,15 @@
             "Pink Floyd's "The Dark Side of the Moon" is more than just an album; it's a cultural phenomenon. Owning this vinyl record is like possessing a piece of music history. Whether you're a devoted Pink Floyd fan or a collector of iconic albums, this is an opportunity you won't want to miss. Don't miss your chance to own a vinyl copy of Pink Floyd's "The Dark Side of the Moon." Visit Vinyl Haven now and add this extraordinary record to your collection. Immerse yourself in the music, and let the journey through "The Dark Side of the Moon" begin.
         </p>
     </div>
-
     </main>
-    <footer class="w-[100%] p-5 bg-slate-500 flex justify-between flex-wrap flex-row relative">
-      <div class="text-black text-sm font-bold font-['Inter']">About us</div>
-      <div class="text-black text-sm font-bold font-['Inter']">Home</div>
+    <footer class="w-[100%] p-5 bg-orange-600 border-t-2 border-black flex font-josefin justify-between flex-wrap flex-row relative">
+      <div class="text-black text-sm font-bold ">Home</div>
+      <div class="text-black text-sm font-bold ">Products</div>
       <div class="flex flex-row items-center gap-1">
-        <img src="./img/Python-logo-notext.svg (1).png" class="w-[2em] h-[2em] relative" alt="" />Company Name
+        <img src="./img/Logo.svg" class="w-[2em] h-[2em] relative" alt="" />Company Name
       </div>
-      <div class="text-black text-sm font-bold font-['Inter'] flex flex-row items-center gap-1">
-        <img class="w-[2em] h-[2em] relative" src="./img/Python-logo-notext.svg (1).png" alt="" />
+      <div class="text-black text-sm font-bold  flex flex-row items-center gap-1">
+        <img class="w-[2em] h-[2em] relative" src="./img/up-arrow.svg" alt="" />
         Go up
       </div>
     </footer>
