--- a/src/vinyl1.html
+++ b/src/vinyl1.html
@@ -27,7 +27,7 @@
         <!-- Right -->
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./aboutUs.html">About us</a></div>
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./products.html">Products</a></div>
-        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart (1).svg" alt="" /></a>
+        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart.svg" alt="" /></a>
         <div class="sm:cursor-pointer p-4 md:hidden">
           <div class="bar bg-black h-1 w-6 mb-1"></div>
           <div class="bar bg-black h-1 w-6 mb-1"></div>
@@ -38,7 +38,7 @@
     <main>
       <article class="flex flex-col md:flex-row md:items-center md:justify-between mb-5">
         <div class="w-full md:w-1/2 mb-4 md:mb-0">
-          <img src="./img/Vynil 1.jfif" alt="" class="w-full h-auto object-cover" />
+          <img src="./img/vinyl1.jpg" alt="" class="w-full h-auto object-cover" />
         </div>
         <div class="w-full md:w-1/2 md:pl-8">
           <h1 class="text-2xl font-bold mb-4">Vinyl 1</h1>
