--- a/src/products.html
+++ b/src/products.html
@@ -31,7 +31,7 @@
         <!-- Right -->
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./aboutUs.html">About us</a></div>
         <div class="md:flex hidden lg:text-black lg:text-lg lg:font-bold"><a href="./products.html">Products</a></div>
-        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart (1).svg" alt="" /></a>
+        <a class="md:flex hidden lg:text-black" href="./main.html"><img src="./img/shopping-cart.svg" alt="" /></a>
         <div class="sm:cursor-pointer p-4 md:hidden">
           <div class="bar bg-black h-1 w-6 mb-1"></div>
           <div class="bar bg-black h-1 w-6 mb-1"></div>
